# ml-deploy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements-cpu.txt  structure.txt
app/: index.html  main.py
model/mnist/: run.py  test_model.ipynb  training.ipynb
model/sketch-images/: labels.json  sketch.ipynb
src/: structure.txt
src/app/backend/: api.py  config.py  inference.py  main.py
src/app/frontend/: index.html  script.js  styles.css
src/app/models/: cnn.py  utils.py
src/app/models/params/: cnn_45_params.json
src/gradio_demo/app/: README.md  index.html  main.py
src/gradio_demo/app/backend/: main.py
src/gradio_demo/app/frontend/: index.html  script.js  styles.css
src/gradio_demo/app/legacy/: main_gradio.py
src/gradio_demo/app/ml_interface/: index.html  script.js  styles.css
src/gradio_demo/model/: utils.py
src/gradio_demo/model/mnist/: mnist_model.pth  model_arch.py  run.py  test_model.ipynb
src/gradio_demo/model/sketch_images/: cnn.py  end2end.ipynb  end2end_thomas.ipynb  labels.json  sketch.ipynb  training_notebook_thomas.ipynb
src/gradio_demo/model/sketch_images/weights/: cnn.pth  cnn_3_conv.pth  cnn_3_conv_64.pth
src/models/: cnn.py
src/models/params/: cnn_64_params.json
tests/: test_inference.py
training/: evaluation.py  ideas.md  training.py  training_notebook_thomas.ipynb
training/model/: utils.py
training/model/sketch_images/: cnn.py  sketch.ipynb  training.py  training_notebook_thomas.ipynb
