[project]
name = "sketch_recognition"
version = "0.1.0"
description = "scketch images classification model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "fastapi>=0.119.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
